--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
     max-width: 600px;
     margin: auto;
     padding: 50px;
+    background-color: blue;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px
 }
 .form-group{
